--- a/package.json
+++ b/package.json
@@ -2,10 +2,24 @@
   "name": "app",
   "private": "true",
   "dependencies": {
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "@rails/webpacker": "5.4.3",
+    "@reduxjs/toolkit": "^1.9.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.2",
+    "webpack": "4.46.0",
+    "webpack-cli": "3.3.12"
   },
   "scripts": {
     "build": "webpack --config webpack.config.js"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.2",
+    "webpack-dev-server": "3"
   }
 }
